--- a/package.json
+++ b/package.json
@@ -2,14 +2,25 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
+  "homepage": "https://yuri69k.github.io/goit-react-hw-05-movies/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+      "axios": "^1.2.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "html-react-parser": "^3.0.6",
+    "octokit": "^2.0.11",
     "react": "^18.1.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
+    "react-loading-skeleton": "^3.1.0",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.57.1",
+    "swr": "^2.0.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
